--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/static/css/main.css
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/static/css/main.css
@@ -1,7 +1,8 @@
 body {
   padding-top: 5rem;
+  background-image: url("https://media.licdn.com/dms/image/D5612AQGvxUIvCJ_dXA/article-cover_image-shrink_720_1280/0/1712526472819?e=1722470400&v=beta&t=uChyBbt9obFANhgf1v4j-ND7twmLDACVFt9byqjWa1E");
 }
 .starter-template {
   padding: 3rem 1.5rem;
-  text-align: center;
+  text-align: top;
 }
